--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 .qodo
-*.meta
+/[Aa]ssets/[Pp]ackages/**/*.meta
+/[Aa]ssets/[Nn]u[Gg]et/**/*.meta
+Assets/NuGet.meta
